test(db-jpa): #6 호출부 단위 테스트 fixture를 DTO 봉인 경로로 이관
EvaluationServiceTest/AdminServiceTest/ApplicationServiceTest/ServiceRequestDocServiceTest의
findAverageScoreByItem/findDailyLoginStats/findMonthlyTrendByBbrC/findPendingListByEno/
findRecentReviewingByBbrC mock을 새 *Rows* 래퍼 + fromRow로 교체(변환 의미 동일 보존)